style: Fixing spacing between elements at markdown

--- a/src/.vuepress/theme/styles/_markdown.scss
+++ b/src/.vuepress/theme/styles/_markdown.scss
@@ -35,6 +35,9 @@
     z-index: 2;
     line-height: 1.04em;
     
+    + h3 {
+      @apply mt-8;
+    }
 
     + p {
       margin-top: 30px;
@@ -42,7 +45,7 @@
   }
 
   h3 {
-    @apply text-xl font-bold;
+    @apply text-xl font-bold mt-12 mb-8;
     line-height: 1.10em;
   }
 
@@ -193,8 +196,12 @@
   }
     
   div[class*=language-] { 
-    @apply relative w-full whitespace-normal;
+    @apply relative w-full whitespace-normal my-8;
     background-color: var(--bg-code-block);
+
+    + p {
+      @apply mt-0;
+    }
   }
 
   .token.block-comment,.token.cdata,.token.comment,.token.doctype,.token.prolog { color:#999 }
